--- a/2000 - Codebase/2300 - Embedded/2310 - Floor Controller/G2Elevator/G2Elevator.ioc
+++ b/2000 - Codebase/2300 - Embedded/2310 - Floor Controller/G2Elevator/G2Elevator.ioc
@@ -128,9 +128,9 @@ PC10.GPIO_Label=Switch_LED
 PC10.Locked=true
 PC10.Signal=GPIO_Output
 PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=Floor_Switch
+PC12.GPIO_Label=Floor_switch
 PC12.Locked=true
-PC12.Signal=GPIO_Output
+PC12.Signal=GPIO_Input
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
