--- a/2000 - Codebase/2300 - Embedded/2310 - Floor Controller/G2Elevator/G2Elevator.ioc
+++ b/2000 - Codebase/2300 - Embedded/2310 - Floor Controller/G2Elevator/G2Elevator.ioc
@@ -123,9 +123,10 @@ PB6.Mode=I2C
 PB6.Signal=I2C1_SCL
 PB7.Mode=I2C
 PB7.Signal=I2C1_SDA
-PC10.GPIOParameters=GPIO_Label
+PC10.GPIOParameters=PinState,GPIO_Label
 PC10.GPIO_Label=Switch_LED
 PC10.Locked=true
+PC10.PinState=GPIO_PIN_RESET
 PC10.Signal=GPIO_Output
 PC12.GPIOParameters=GPIO_Label
 PC12.GPIO_Label=Floor_switch
