--- a/2000 - Codebase/2300 - Embedded/2310 - Floor Controller/G2Elevator/G2Elevator.ioc
+++ b/2000 - Codebase/2300 - Embedded/2310 - Floor Controller/G2Elevator/G2Elevator.ioc
@@ -24,18 +24,20 @@ Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PA4
 Mcu.Pin11=PA5
-Mcu.Pin12=PA11
-Mcu.Pin13=PA12
-Mcu.Pin14=PA13
-Mcu.Pin15=PA14
-Mcu.Pin16=PA15
-Mcu.Pin17=PC10
-Mcu.Pin18=PC12
-Mcu.Pin19=PB3
+Mcu.Pin12=PC7
+Mcu.Pin13=PC8
+Mcu.Pin14=PA11
+Mcu.Pin15=PA12
+Mcu.Pin16=PA13
+Mcu.Pin17=PA14
+Mcu.Pin18=PA15
+Mcu.Pin19=PC10
 Mcu.Pin2=PC15-OSC32_OUT
-Mcu.Pin20=PB6
-Mcu.Pin21=PB7
-Mcu.Pin22=VP_SYS_VS_Systick
+Mcu.Pin20=PC12
+Mcu.Pin21=PB3
+Mcu.Pin22=PB6
+Mcu.Pin23=PB7
+Mcu.Pin24=VP_SYS_VS_Systick
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
 Mcu.Pin5=PC2
@@ -43,7 +45,7 @@ Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
 Mcu.Pin9=PA3
-Mcu.PinsNb=23
+Mcu.PinsNb=25
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F303RETx
@@ -62,13 +64,15 @@ NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:true\:false\:true\:true\:true\:true
 NVIC.USB_LP_CAN_RX0_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true
-PA0.GPIOParameters=GPIO_Label
+PA0.GPIOParameters=PinState,GPIO_Label
 PA0.GPIO_Label=Floor1LED
 PA0.Locked=true
+PA0.PinState=GPIO_PIN_RESET
 PA0.Signal=GPIO_Output
-PA1.GPIOParameters=GPIO_Label
+PA1.GPIOParameters=PinState,GPIO_Label
 PA1.GPIO_Label=Floor2LED
 PA1.Locked=true
+PA1.PinState=GPIO_PIN_RESET
 PA1.Signal=GPIO_Output
 PA11.Mode=CAN_Activate
 PA11.Signal=CAN_RX
@@ -104,9 +108,10 @@ PA3.GPIO_Speed=GPIO_SPEED_FREQ_LOW
 PA3.Locked=true
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=PinState,GPIO_Label
 PA4.GPIO_Label=Floor3LED
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_RESET
 PA4.Signal=GPIO_Output
 PA5.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA5.GPIO_Label=LD2 [Green Led]
@@ -147,6 +152,14 @@ PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=Debounce2
 PC2.Locked=true
 PC2.Signal=GPIO_Output
+PC7.GPIOParameters=GPIO_Label
+PC7.GPIO_Label=Switch_LED2
+PC7.Locked=true
+PC7.Signal=GPIO_Output
+PC8.GPIOParameters=GPIO_Label
+PC8.GPIO_Label=Switch_LED3
+PC8.Locked=true
+PC8.Signal=GPIO_Output
 PF0-OSC_IN.Locked=true
 PF0-OSC_IN.Mode=HSE-External-Clock-Source
 PF0-OSC_IN.Signal=RCC_OSC_IN
