--- a/2000 - Codebase/2300 - Embedded/2310 - Floor Controller/G2Elevator/G2Elevator.ioc
+++ b/2000 - Codebase/2300 - Embedded/2310 - Floor Controller/G2Elevator/G2Elevator.ioc
@@ -40,7 +40,7 @@ Mcu.Pin23=PB7
 Mcu.Pin24=VP_SYS_VS_Systick
 Mcu.Pin3=PF0-OSC_IN
 Mcu.Pin4=PF1-OSC_OUT
-Mcu.Pin5=PC2
+Mcu.Pin5=PC3
 Mcu.Pin6=PA0
 Mcu.Pin7=PA1
 Mcu.Pin8=PA2
@@ -89,9 +89,9 @@ PA14.Locked=true
 PA14.Mode=Serial_Wire
 PA14.Signal=SYS_JTCK-SWCLK
 PA15.GPIOParameters=GPIO_Label
-PA15.GPIO_Label=Debouce1
+PA15.GPIO_Label=Floor2
 PA15.Locked=true
-PA15.Signal=GPIO_Output
+PA15.Signal=GPXTI15
 PA2.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_Mode
 PA2.GPIO_Label=USART_TX
 PA2.GPIO_Mode=GPIO_MODE_AF_PP
@@ -134,9 +134,9 @@ PC10.Locked=true
 PC10.PinState=GPIO_PIN_RESET
 PC10.Signal=GPIO_Output
 PC12.GPIOParameters=GPIO_Label
-PC12.GPIO_Label=Floor_switch
+PC12.GPIO_Label=Floor1
 PC12.Locked=true
-PC12.Signal=GPIO_Input
+PC12.Signal=GPXTI12
 PC13.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PC13.GPIO_Label=B1 [Blue PushButton]
 PC13.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
@@ -148,10 +148,10 @@ PC14-OSC32_IN.Signal=RCC_OSC32_IN
 PC15-OSC32_OUT.Locked=true
 PC15-OSC32_OUT.Mode=LSE-External-Oscillator
 PC15-OSC32_OUT.Signal=RCC_OSC32_OUT
-PC2.GPIOParameters=GPIO_Label
-PC2.GPIO_Label=Debounce2
-PC2.Locked=true
-PC2.Signal=GPIO_Output
+PC3.GPIOParameters=GPIO_Label
+PC3.GPIO_Label=Floor3
+PC3.Locked=true
+PC3.Signal=GPXTI3
 PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=Switch_LED2
 PC7.Locked=true
@@ -242,8 +242,14 @@ RCC.USART2Freq_Value=36000000
 RCC.USART3Freq_Value=36000000
 RCC.USBFreq_Value=72000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI12.0=GPIO_EXTI12
+SH.GPXTI12.ConfNb=1
 SH.GPXTI13.0=GPIO_EXTI13
 SH.GPXTI13.ConfNb=1
+SH.GPXTI15.0=GPIO_EXTI15
+SH.GPXTI15.ConfNb=1
+SH.GPXTI3.0=GPIO_EXTI3
+SH.GPXTI3.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
